# u.leti.9892.3sem-2020.programming.2lab

./: CMakeLists.txt  README.md  gen.cpp  gen.h  input.cpp  input.h  m1  main.cpp  matrix.cpp  matrix.h  menu.cpp  menu.h
report/: report_lr2.tex
report/modules/: inputs.tex  title_page.tex
report/modules/chapters/: conclusion.tex  data_structures_description.tex  files_formats.tex  functions_description.tex  goal.tex  listing.tex  programm_algorithm.tex  task_defenition.tex  tests.tex
report/modules/inputs/: general.tex
report/resources/: data_schema.drawio
